# modern-cpp-template

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: run.yml
cmake/: analysis.cmake  clang-format.cmake
cmake/modules/: FindCLANG_FORMAT.cmake  FindCppCheck.cmake  clang-format.cmake
subdir2/: CMakeLists.txt
subdir3/: CMakeLists.txt
